<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>
		4.0.0
	</modelVersion>
	<groupId>
		org.example
	</groupId>
	<artifactId>
		Grading_systen_team5
	</artifactId>
	<version>
		1.0-SNAPSHOT
	</version>
	<properties>
		<maven.compiler.source>
			19
		</maven.compiler.source>
		<maven.compiler.target>
			19
		</maven.compiler.target>
		<project.build.sourceEncoding>
			UTF-8
		</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>
				org.junit.jupiter
			</groupId>
			<artifactId>
				junit-jupiter
			</artifactId>
			<version>
				5.8.1
			</version>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.junit.jupiter
			</groupId>
			<artifactId>
				junit-jupiter
			</artifactId>
			<version>
				5.8.1
			</version>
			<scope>
				test
			</scope>
		</dependency>
	</dependencies>
</project>
